// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Computed chart dimensions should be equal to parent dimension with no axis minus margins 1`] = `
Object {
  "height": 60,
  "left": 20,
  "top": 20,
  "width": 60,
}
`;

exports[`Computed chart dimensions should be padded by a bottom axis 1`] = `
Object {
  "height": 10,
  "left": 20,
  "top": 20,
  "width": 60,
}
`;

exports[`Computed chart dimensions should be padded by a left axis 1`] = `
Object {
  "height": 60,
  "left": 70,
  "top": 20,
  "width": 10,
}
`;

exports[`Computed chart dimensions should be padded by a right axis 1`] = `
Object {
  "height": 60,
  "left": 20,
  "top": 20,
  "width": 10,
}
`;

exports[`Computed chart dimensions should be padded by a top axis 1`] = `
Object {
  "height": 10,
  "left": 20,
  "top": 70,
  "width": 60,
}
`;
